fixed collapse button

--- a/repz/static/style.css
+++ b/repz/static/style.css
@@ -213,3 +213,6 @@ span {
     font-weight: 800;
   }
 
+#my-message-area {
+  display: none;
+}
